--- a/_footer.scss
+++ b/_footer.scss
@@ -1,24 +1,26 @@
+@import "_variables.scss";
+
 footer{
     height: auto;
     width: 100%;
     text-align: center;
     font-size: 20px;
     font-family: 'Roboto Condensed', sans-serif;
-    background-color: rgb(255, 179, 0);
+    background-color: $orange;
     margin-top: 1rem;
     p {
         padding-top: 5px;
-        color: rgba(238, 130, 238, 0.899);
-        text-shadow: 0 0 5px white;
+        color: $violet;
+        text-shadow: 0 0 5px $white;
     }
     i{
         letter-spacing: 10px;
         font-size: 40px;
     }
     a {
-        color: white;
+        color: $white;
     }
     a:hover{
-        color: violet;
+        color: $violet;
     }
 }
