--- a/_variables.scss
+++ b/_variables.scss
@@ -1,17 +1,20 @@
-$gris-oscuro:#2F2F2F;
-$gris-claro:#3d3d3d;
-$blanco:whitesmoke;
-$peach:#ffbd59;
-$negro:black;
-$gris:#545454;
-$naranja:#F95738;
-$peach-intenso:#fda219;
 
+/*colors*/
+$dark:#2a2a2a;
+$background: black;
+$white:whitesmoke;
+$violet:rgb(243, 120, 243);
+$orange:rgb(255, 179, 0);
+
+
+/*Font family*/
 $principal:'Roboto Mono', monospace;
 $sub-titulos:'Open Sans Condensed', sans-serif;
 $contenidos:"Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
 $detalles:"Work sans", sans-serif;
 
+
+/*Medidas*/
 $width-mobile:15rem;
 $radius-mobile:.5rem;
 $padding-mobile:.2rem;
