arreglos de etiquetas

--- a/_aboutMe.scss
+++ b/_aboutMe.scss
@@ -91,7 +91,7 @@
     }
 }
 .like3-right{
-    height: 550px;
+    height: 600px;
     background-image: url(./img/laBandaDelParque.jpg);
     background-size: cover ;
     background-position: center;
@@ -101,7 +101,7 @@
 }
 .like4-left{
     padding: 20px;
-    background-color: $dark;
+    background-color: $background;
     color: $white;
     p{
         text-align: justify;
