--- a/_variables.scss
+++ b/_variables.scss
@@ -1,10 +1,10 @@
 
 /*colors*/
-$dark:#2a2a2a;
-$background: black;
-$white:whitesmoke;
-$violet:rgb(243, 120, 243);
-$orange:rgb(255, 179, 0);
+$dark:#0E5E6F;
+$background: #222831;
+$white:#EEEEEE;
+$color1:#00ADB5;
+$color2:#393E46;
 
 
 /*Font family*/
