--- a/_footer.scss
+++ b/_footer.scss
@@ -6,11 +6,11 @@ footer{
     text-align: center;
     font-size: 20px;
     font-family: 'Roboto Condensed', sans-serif;
-    background-color: $orange;
+    background-color: $color2;
     margin-top: 1rem;
     p {
         padding-top: 5px;
-        color: $violet;
+        color: $color1;
         text-shadow: 0 0 5px $white;
     }
     i{
@@ -21,6 +21,6 @@ footer{
         color: $white;
     }
     a:hover{
-        color: $violet;
+        color: $color1;
     }
 }
